--- a/style.css
+++ b/style.css
@@ -303,6 +303,7 @@ header .navbar-header.fixed .navbar-list > * {
   background-color: var(--dark);
 }
 .newpoem-container {
+  margin: 4rem 0;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 3rem;
@@ -460,7 +461,7 @@ header .navbar-header.fixed .navbar-list > * {
   width: 100%;
   max-height: 600px;
 }
-.slide {
+#slider .slide {
   display: none;
 	padding-bottom:70%;
   animation: fadeIn 1s linear forwards;
@@ -469,14 +470,14 @@ header .navbar-header.fixed .navbar-list > * {
   0% {opacity: 0;}
   100% {opacity: 1;}
 }
-.slide img {
+#slider .slide img {
   width: 100%;
   height: 100%;
   position: absolute;
   top: 0;
   object-fit: cover;
 }
-.slide-content {
+#slider .slide-content {
 	position:absolute;
   top: 45%;
   left: 0%;
@@ -487,7 +488,7 @@ header .navbar-header.fixed .navbar-list > * {
   text-align: center;
   z-index: 9;
 }
-.slide-content h3 {
+#slider .slide-content h3 {
   font-size: 2rem;
   font-weight: 300;
   text-transform: uppercase; 
@@ -497,7 +498,7 @@ header .navbar-header.fixed .navbar-list > * {
   transform: translateY(100vh);
   animation: bounceIn 1s ease 0.1s forwards;
 }
-.slide-content h2 {
+#slider .slide-content h2 {
   font-size: 2rem;
   font-weight: 500;
   transform: translateY(100vh);
@@ -510,8 +511,8 @@ header .navbar-header.fixed .navbar-list > * {
   95% { transform: translateY(10%); }
   100% { transform: translateY(0%); }
 }
-.slide-content h2:before,
-.slide-content h2:after {
+#slider .slide-content h2:before,
+#slider .slide-content h2:after {
   content: "";
   display: inline-block;
   margin: 0 1rem;
@@ -520,27 +521,7 @@ header .navbar-header.fixed .navbar-list > * {
   vertical-align: middle;
   background-color: white;
 }
-.prev, .next {
-  cursor: pointer;
-  user-select: none;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 1rem;
-  border-radius: 0 3px 3px 0;
-  color: white;
-  font-weight: bold;
-  font-size: 1.4rem;
-  transition: 0.6s ease;
-}
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-.prev:hover, .next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-.dots {
+#slider .dots {
   position: absolute;
   bottom: 8%;
   left: 0;
@@ -549,7 +530,7 @@ header .navbar-header.fixed .navbar-list > * {
   width: 10rem;
   text-align: center;
 }
-.dot {
+#slider .dot {
   cursor: pointer;
   height: 0.9rem;
   width: 0.9rem;
@@ -559,7 +540,7 @@ header .navbar-header.fixed .navbar-list > * {
   background-color: var(--beige);
   display: inline-block;
 }
-.dot:hover, .dot.active {
+#slider .dot:hover, #slider .dot.active {
   border: 0.1rem solid var(--beige);
   background-color: var(--dark);
 }
@@ -617,13 +598,16 @@ header .navbar-header.fixed .navbar-list > * {
   text-transform: uppercase;
   margin-bottom: 0.5rem;
 }
+.top-container h2 a {
+  color: white;
+}
 .top-container p {
   font-size: 1.2rem;
   text-shadow: 0 0 2px black;
   text-transform: uppercase;
   margin-bottom: 0.8rem;
 }
-.top-container a {
+.top-container a.downarrow-link {
   display: inline-block;
   background-color: rgba(0, 0, 0, 0.3);
   background-position: center;
@@ -632,10 +616,10 @@ header .navbar-header.fixed .navbar-list > * {
   border-radius: 50%;
   position: relative;
 }
-.top-container a:hover {
+.top-container a.downarrow-link:hover {
   background-color: rgba(0, 0, 0, 0.5);
 }
-.top-container a .top-downarrow {
+.top-container a.downarrow-link .downarrow {
   display: inline-block;
   transform: rotate(90deg);
   color: var(--lightpurple);
@@ -767,6 +751,9 @@ header .navbar-header.fixed .navbar-list > * {
   margin: 0.8rem auto;
   background-color: var(--dark);
 }
+.text-newpoem:first-of-type {
+  margin-top: 4rem;
+}
 .text-newpoem {
   text-align: left;
   display: grid;
@@ -864,6 +851,7 @@ header .navbar-header.fixed .navbar-list > * {
   mix-blend-mode: normal;
 }
 .sort-container {
+  margin: 4rem 0;
   overflow: hidden;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -1070,7 +1058,7 @@ header .navbar-header.fixed .navbar-list > * {
   }
 }
 /*=========================*/
-/* gallery */
+/* gallery general*/
 /*=========================*/
 .gallery {
   background-color: var(--orange);
@@ -1088,6 +1076,9 @@ header .navbar-header.fixed .navbar-list > * {
   margin: 0.8rem auto;
   background-color: var(--dark);
 }
+/*=========================*/
+/* gallery */
+/*=========================*/
 .gallery-overlay {
   display: none;
   z-index: 100;
@@ -1150,18 +1141,19 @@ header .navbar-header.fixed .navbar-list > * {
   border-radius: 25px 0;
 }
 .gallery-container {
+  margin: 4rem 0;
   overflow: hidden;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
   grid-auto-rows: minmax(auto, 13rem);
 }
-.gallery-image {
+.gallery-container .gallery-image {
   overflow: hidden;
   display: grid;
   grid-template-columns: 1;
   cursor: pointer;
 }
-.gallery-image img {
+.gallery-container .gallery-image img {
   grid-column: 1 / -1;
   grid-row: 1 / -1;
   width: 100%;
@@ -1169,9 +1161,96 @@ header .navbar-header.fixed .navbar-list > * {
   object-fit: cover;
   transition: all 0.3s linear;
 }
-.gallery-image:hover img {
+.gallery-container .gallery-image:hover img {
   transform: scale(1.4);
 }
+/*=========================*/
+/* gallery-slider */
+/*=========================*/
+#gallery-slider {
+  margin-top: -4rem; /* adjust the anchor position */
+  padding-top: 4rem; /* adjust the anchor position */
+  overflow: hidden;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 25rem auto;
+  gap: 1rem;
+}
+#gallery-slider .gallery-slide-container {
+  position: relative;
+  background: rgba(255, 255, 255, 0.5);
+}
+#gallery-slider .slide {
+  display: none;
+  animation: fadeIn 1s linear forwards;
+}
+@keyframes fadeIn {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
+}
+#gallery-slider .gallery-slide-container img {
+  width: auto;
+  height: 25rem;
+  object-fit: contain;
+}
+#gallery-slider .numbertext {
+	position:absolute;
+  top: 0;
+  left: 0;
+  margin: 0 auto;
+  padding: 0.8rem;
+  color: white;
+  font-size: 1.5rem;
+  text-shadow: 2px 2px 0.5rem var(--dark);
+  z-index: 9;
+}
+
+#gallery-slider .prev {
+  cursor: pointer;
+  user-select: none;
+  width: auto;
+  padding: 1rem;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.2);
+  font-weight: bold;
+  font-size: 1.4rem;
+  transition: 0.6s ease;
+  z-index: 9;
+  position: absolute;
+  top: 50%;
+  left: 0; 
+  border-radius: 0 3px 3px 0;
+}
+#gallery-slider .next {
+  cursor: pointer;
+  user-select: none;
+  width: auto;
+  padding: 1rem;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.2);
+  font-weight: bold;
+  font-size: 1.4rem;
+  transition: 0.6s ease;
+  z-index: 9;
+  position: absolute;
+  top: 50%;
+  right: 0; 
+  border-radius: 3px 0 0 3px;
+}
+#gallery-slider .prev:hover, #gallery-slider .next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+#gallery-slider .thumbnails {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(5rem, 1fr));
+  grid-auto-rows: 4rem;
+} 
+#gallery-slider .thumbnail {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 /*=========================*/
 /* contact */
 /*=========================*/
