--- a/style.css
+++ b/style.css
@@ -85,7 +85,8 @@ header .navbar-header {
   align-items: center;
   gap: 2rem;
   z-index: 99;
-  transition: all 1s ease-in-out;
+  transition: 1000ms ease-in-out;
+  transition-property: display, position, background, border-bottom, color;
 }
 .navbar-list > * {
   padding-top: 0.3rem;
@@ -321,10 +322,11 @@ header .navbar-header.fixed .navbar-list > * {
 .newpoem .view-overlay img{
   width: 100%;
   height: 100%;
-  transition: all 0.7s ease-in-out;
+  transition: 500ms ease-in-out;
+  transition-property: transform, opacity;
 }
 .newpoem .view-overlay:hover img {
-  transform: scale(10);
+  transform: scale(5);
   opacity: 0;
 }
 .newpoem .view-overlay .mask {
@@ -338,7 +340,7 @@ header .navbar-header.fixed .navbar-list > * {
   top: 30%;
   left: 0;
   opacity: 0;
-  transition: all 0.5s linear;
+  transition: opacity 500ms linear;
 }
 .newpoem .view-overlay:hover .mask {
   opacity: 1;
@@ -812,7 +814,7 @@ header .navbar-header.fixed .navbar-list > * {
 	padding: 1rem 1.5rem;
   border-radius: 0.5rem;;
   color: var(--lightgreen);
-  background: var(--lightgreen);
+  background-color: var(--lightgreen);
   position: relative;
   margin: 0 0.5rem;
   overflow: hidden;
@@ -830,11 +832,11 @@ header .navbar-header.fixed .navbar-list > * {
 }
 #news-filter a::before {
   content: '';
-  background: var(--dark);
+  background-color: var(--dark);
   width: 130%;
   left: -10%;
   transform: skew(30deg);
-  transition: transform 0.4s cubic-bezier(0.3, 1, 0.8, 1);
+  transition: transform 500ms cubic-bezier(0.3, 1, 0.8, 1);
 }
 #news-filter a:hover::before {
   transform: translateX(100%);
@@ -877,7 +879,8 @@ header .navbar-header.fixed .navbar-list > * {
   flex-grow: 1;
   width: 100%;
   height: 100%;
-  transition: all 0.7s ease-in-out;
+  transition: 500ms ease-in-out;
+  transition-property: transform, opacity;
 }
 .sort .view-overlay:hover img {
   transform: scale(10);
@@ -1161,7 +1164,7 @@ header .navbar-header.fixed .navbar-list > * {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  transition: all 0.3s linear;
+  transition: transform 300ms linear;
 }
 .gallery-container .gallery-image:hover img {
   transform: scale(1.4);
@@ -1215,7 +1218,7 @@ header .navbar-header.fixed .navbar-list > * {
   background-color: rgba(0, 0, 0, 0.2);
   font-weight: bold;
   font-size: 1.4rem;
-  transition: 0.6s ease;
+  transition: background-color 500ms ease;
   z-index: 9;
   position: absolute;
   top: 50%;
@@ -1231,7 +1234,7 @@ header .navbar-header.fixed .navbar-list > * {
   background-color: rgba(0, 0, 0, 0.2);
   font-weight: bold;
   font-size: 1.4rem;
-  transition: 0.6s ease;
+  transition: background-color 500ms ease;
   z-index: 9;
   position: absolute;
   top: 50%;
@@ -1313,7 +1316,7 @@ header .navbar-header.fixed .navbar-list > * {
   display: grid;
   justify-items: center;
   align-items: center;
-  transition: 0.2s;
+  transition: transform 200ms linear;
   transform: translateY(100%);
 }
 .item:hover .item__overlay{
